<resources>
    <string name="setting_resolution_180P">180P</string>
    <string name="setting_resolution_240P">240P</string>
    <string name="setting_resolution_360P">360P</string>
    <string name="setting_resolution_480P">480P</string>
    <string name="setting_resolution_540P">540P</string>
    <string name="setting_resolution_720P">720P</string>
    <string name="setting_audio_480">48KHz</string>
    <string name="setting_audio_441">44.1KHz</string>
    <string name="setting_audio_320">32KHz</string>
    <string name="setting_audio_aac_lc">LC</string>
    <string name="setting_audio_aac_he">HE-AAC</string>
    <string name="setting_audio_aac_hev2">HEv2-AAC</string>
    <string name="setting_audio_aac_ld">AAC-LD</string>
    <string name="setting_audio_aac_eld">ELD</string>
    <string name="app_name">AlivcLive</string>
    <string name="push_url_messge">It is recommended to change push url to avoid error caused by many people using same url.</string>
    <string name="live_scene_list">Scene list of live</string>
    <string name="live_basic_function">PusherSDKv3.4.0</string>
    <string name="live_normal_function">NormalSDK</string>
    <string name="video_recording">VideoRecording</string>
    <string name="live_basic_function_old">PusherSDKv1.3.0</string>
    <string name="license_declaration">License declaration</string>
    <string name="license_declaration_text">© 2017 Copyright by Alibaba Cloud All rights reserved</string>
    <string name="version">Version:v3.4.0</string>
    <string name="pusher_setting">Pusher setting</string>
    <string name="input_tips">Please enter url or scan QR code</string>
    <string name="resolution_label">Resolution</string>
    <string name="target_bitrate">Target bitrate</string>
    <string name="target_rate_value">1200</string>
    <string name="min_bitrate">Min bitrate</string>
    <string name="min_rate_value">300</string>
    <string name="initial_bitrate">Initial bitrate</string>
    <string name="audio_bitrate">Audio bitrate</string>
    <string name="initial_bit_value">1000</string>
    <string name="audio_bitrate_value">64</string>
    <string name="captrue_fps">Captrue fps</string>
    <string name="init_fps">20</string>
    <string name="audio_sampling_rate">Audio sampling rate</string>
    <string name="audio_profile">Audio profile</string>
    <string name="audio_rate_value">20</string>
    <string name="sound_track">Sound track</string>
    <string name="single_track">Single track</string>
    <string name="dual_track">Dual track</string>
    <string name="quality_resolution_first">High quality priority</string>
    <string name="quality_fluency_first">fluency priority</string>
    <string name="quality_custom">custom</string>
    <string name="beauty_mode_nornal">Standard</string>
    <string name="beauty_mode_professional">Professional</string>
    <string name="reconnect_duration">Reconnection duration</string>
    <string name="reconnect_value">1000</string>
    <string name="reconnect_times">Reconnection times</string>
    <string name="retry_count">5</string>
    <string name="landscape_model">Orientation</string>
    <string name="portrait">Portrait</string>
    <string name="homeLeft">HomeLeft</string>
    <string name="homeRight">HomeRight</string>
    <string name="front_camera">Front camera</string>
    <string name="setting_pre_mirror">Preview mirror</string>
    <string name="setting_push_mirror">Push mirror</string>
    <string name="display_mode">DisplayMode</string>
    <string name="display_mode_full">scaleToFill</string>
    <string name="display_mode_fit">aspectFit</string>
    <string name="display_mode_cut">aspectFill</string>
    <string name="watermark">Watermark</string>
    <string name="watermark_setting">Setting</string>
    <string name="screen_capture">Screen capture</string>
    <string name="audio_only_push_streaming">Audio only</string>
    <string name="video_only_push_streaming">Video only</string>
    <string name="bitrate_control">Bitrate Control</string>
    <string name="enable_debug_view">Enable DebugView</string>
    <string name="extern_stream_mix">Mix Extern Stream</string>
    <string name="extern_stream_main">Main Extern Stream</string>
    <string name="pause_image">Pause Image</string>
    <string name="network_image">NetworkPoor Image</string>
    <string name="variable_resolution">Variable Resolution</string>
    <string name="video_mix_streaming">Mix</string>
    <string name="beauty_mode_face">Beauty Mode</string>
    <string name="auto_focus">Auto focus</string>
    <string name="beauty_enable">Beauty</string>
    <string name="hardware_encode">Hardware encode</string>
    <string name="software_encode">Software encode</string>
    <string name="audio_hardware_encode">Audio Hardware enc</string>
    <string name="audio_software_encode">Audio Software enc</string>
    <string name="asynchronous_interface">Asynchronous interface</string>
    <string name="start_button">Start pushing</string>
    <string name="start_preview_button">Start preview</string>
    <string name="stop_preview_button">Stop preview</string>
    <string name="pause_button">Pause</string>
    <string name="resume_button">Resume</string>
    <string name="stop_button">Stop pushing</string>
    <string name="more_setting_button">More setting</string>
    <string name="repush_button">Restart pushing</string>
    <string name="slide_right_view_log_char">Slide right to view log chart</string>
    <string name="slide_left_view_log">Slide left to view log</string>
    <string name="share_button">Share</string>
    <string name="dy_add_button">DynamicAdd</string>
    <string name="dy_remove_button">DynamicRemove</string>
    <string name="beauty_on">Beauty on</string>
    <string name="beauty_off">Beauty off</string>
    <string name="beauty_white">Whitening</string>
    <string name="beauty_skin_smooth">Smooth skin</string>
    <string name="beauty_ruddy">Ruddy</string>
    <string name="beauty_brightness">Brightness</string>
    <string name="beauty_cheekpink">CheekPink</string>
    <string name="beauty_thinface">SlimFace</string>
    <string name="beauty_shortenface">ShortenFace</string>
    <string name="beauty_bigeye">BigEye</string>
    <string name="save_log">Save log</string>
    <string name="modules_time_consuming">Time consuming</string>
    <string name="modules_audio_fps">Audio fps</string>
    <string name="modules_video_fps">Video fps</string>
    <string name="modules_bitrate">Bitrate</string>
    <string name="capture">Capture</string>
    <string name="render">Render</string>
    <string name="encode">Encode</string>
    <string name="push">Push</string>
    <string name="local_log">Local log</string>
    <string name="back_music">Background Music</string>
    <string name="times">times</string>
    <string name="mic_volume">Mic Volume</string>
    <string name="total_time">Total consuming</string>
    <string name="audio_fps">Audio fps</string>
    <string name="video_fps">Video fps</string>
    <string name="bitrate">Bitrate</string>
    <string name="video_encode">Video encode</string>
    <string name="audio_encode">Audio encode</string>
    <string name="buffer">Buffer</string>
    <string name="video_renderbuffer">Video render</string>
    <string name="video_encodebuffer">Video encode</string>
    <string name="video_uploadbuffer">Video upload</string>
    <string name="audio_encodebuffer">Audio encode</string>
    <string name="audio_uploadbuffer">Audio upload</string>
    <string name="start_preview">Start preview</string>
    <string name="stop_preview">Stop preview</string>
    <string name="pause_push">Pause</string>
    <string name="resume_push">Resume</string>
    <string name="first_frame">First frame showed</string>
    <string name="setting_flash">Flash on</string>
    <string name="exit_publisher">Exit</string>
    <string name="advanced_options">advanced options</string>
    <string name="GOP">Gop</string>
    <string name="push_url">Push url</string>
    <string name="ispushing">Pushing</string>
    <string name="publisher_log">pusher log：</string>
    <string name="video_pts">Current video pts:</string>
    <string name="audio_pts">Current audio pts：</string>
    <string name="keyframe_pts">Current KeyFrame pts:</string>
    <string name="video_buffer">Current video buffer in encoding queue：</string>
    <string name="audio_buffer">Current audio buffer in encoding queue：</string>
    <string name="rtmp_video_buffer">Current video buffer in RTMP queue：</string>
    <string name="rtmp_audio_buffer">Current audio buffer in RTMP queue：</string>
    <string name="drop_video_frame">Video frame dropped：</string>
    <string name="drop_audio_frame">Audio frame dropped：</string>
    <string name="video_size">Total size of video uploaded（KB）：</string>
    <string name="audio_size">Total size of audio uploaded（KB）：</string>
    <string name="no_camera_permission">Camera usage is not permitted, please open first</string>
    <string name="no_record_bluetooth_permission">Bluetooth is not permitted to record, please open first</string>
    <string name="no_record_audio_permission">Audio is not permitted to record, please open first</string>
    <string name="no_read_phone_state_permission">Phone state is not permitted to read, please opend first</string>
    <string name="no_write_external_storage_permission">External storage is not permitted to write, please open first</string>
    <string name="no_read_external_storage_permission">External storage is not permitted to read, please open first</string>
    <string name="dialog_title">Error tips</string>
    <string name="ok">OK</string>
    <string name="reconnect">Reconnect</string>
    <string name="mute_off">Mute close</string>
    <string name="mute_on">Mute on</string>
    <string name="mirror_off">Mirror off</string>
    <string name="mirror_on">Mirror on</string>
    <string name="advance_setting">Advanced setting</string>
    <string name="toggle_switch_flash_on">Flash on</string>
    <string name="toggle_switch_flash_off">Flash off</string>
    <string name="app_camera">Camera switch</string>
    <string name="live_push">Start pushing</string>
    <string name="live_stop">Stop pushing</string>
    <string name="toggle_switch_beauty_on">Beauty on</string>
    <string name="toggle_switch_beauty_off">Beauty off</string>
    <string name="VIDEO_CAPTURE_FPS">Video capture fps:</string>
    <string name="AUDIO_ENCODER_FPS">Audio encoder fps:</string>
    <string name="VIDEO_ENCODER_FPS">Video encoder fps:</string>
    <string name="OUTPUT_BITRATE">Output bitrate:</string>
    <string name="AV_OUTPUT_DIFF">The difference between audio pts and video pts:</string>
    <string name="AUDIO_OUTPUT_FPS">Output fps of audio:</string>
    <string name="VIDEO_OUTPUT_FPS">Output fps of video:</string>
    <string name="VIDEO_DELAY_DURATION">Video delay duration:</string>
    <string name="AUDIO_DELAY_DURATION">Audio delay duration:</string>
    <string name="VIDEO_CACHE_FRAME_CNT">Number of video cache frame:</string>
    <string name="AUDIO_CACHE_FRAME_CNT">Number of audio cache frame:</string>
    <string name="VIDEO_CACHE_BYTE_SIZE">Size of video cache:</string>
    <string name="AUDIO_CACHE_BYTE_SIZE">Size of audio cache:</string>
    <string name="VIDEO_FRAME_DISCARD_CNT">Number of video frame dropped:</string>
    <string name="AUDIO_FRAME_DISCARD_CNT">Number of audio frame dropped:</string>
    <string name="CUR_VIDEO_BUEATY_DURATION">Time costs of beauty:</string>
    <string name="CUR_VIDEO_ENCODER_DURATION">Time costs of video encoding:</string>
    <string name="cur_video_encode_bitrate">Current video encoding bitrate:</string>
    <string name="VIDEO_OUTPUT_FRAME_COUNT">Number of video output frame:</string>
    <string name="VIDEO_DATA">Size of video output frame:</string>
    <string name="VIDEO_BUFFER_COUNT">Number of video buffer frame:</string>
    <string name="AUDIO_DATA">Size of audio output:</string>
</resources>